syntax = "proto3";
import "google/protobuf/wrappers.proto";

package core.protos;

message GoogleChatSpace {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue display_name = 2;
  google.protobuf.StringValue type = 3;
  google.protobuf.StringValue space_type = 4;
  google.protobuf.StringValue description = 5;
}